# jojotools

./: .env.example  INSTALL.md  README.md
.claude-plugin/: marketplace.json
docs/: SETUP.md
plugins/ai-router/: .mcp.json  CLAUDE.md  conftest.py  models.json  pyproject.toml  server.py  test_capabilities.py  test_integration.py  test_routing.py  test_server.py  update_models.py
plugins/ai-router/.claude-plugin/: plugin.json
plugins/ai-router/go/: .gitignore  Makefile  README.md  catalog.go  dirread.go  go.mod  http.go  http_test.go  keys.go  main.go  mcp.json.example  models.json  routing.go  routing_test.go  run.sh  sakana_exa_test.go  tools.go
plugins/ai-router/go/scripts/: ai-router
plugins/jojo-skills/: META-OPTIMIZATION.md  NOTICE
plugins/jojo-skills/.claude-plugin/: plugin.json
plugins/jojo-skills/agents/: flo-evaluator.md  flo-worker.md
plugins/jojo-skills/skills/ayo/: SKILL.md
plugins/jojo-skills/skills/ayoflo/: SKILL.md
plugins/jojo-skills/skills/brainstorming/: SKILL.md
plugins/jojo-skills/skills/dago/: SKILL.md
plugins/jojo-skills/skills/executing-plans/: SKILL.md
plugins/jojo-skills/skills/feedback-loop-optimization/: ORCHESTRATION.md  README.md  REFERENCE.md  SKILL.md
plugins/jojo-skills/skills/init-memory/: SKILL.md
plugins/jojo-skills/skills/init-repo/: SKILL.md
plugins/jojo-skills/skills/monkeypaw/: RUNBOOK.md  SKILL.md
plugins/jojo-skills/skills/subagent-driven-development/: SKILL.md  code-quality-reviewer-prompt.md  implementer-prompt.md  (+1 more)
scripts/: agent-mem.sh  claude-sandbox.sb  claude-sandbox.sh
(+27 files in other folders)
