[project]
name = "ai-router"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.3",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: live API calls — requires KIMI_API_KEY, run with: pytest -m integration",
]
